Move memoryleak.rb to /common; Added ablity to filter on repositories to the public app and use webhooks to sync @repositories

--- a/public/config/locales/en.yml
+++ b/public/config/locales/en.yml
@@ -34,6 +34,7 @@ en:
       query: Text
       subjects: Subject
       primary_type: Type
+      repository: Repository
   iso_3166:
     AF: AFGHANISTAN (AF)
     AX: ÅLAND ISLANDS (AX)
