Index the creators for a record (linked_agent with creator role); and surface this as a filter in the search;

--- a/public/config/locales/en.yml
+++ b/public/config/locales/en.yml
@@ -35,6 +35,7 @@ en:
       subjects: Subject
       primary_type: Type
       repository: Repository
+      creators: Creator
   iso_3166:
     AF: AFGHANISTAN (AF)
     AX: ÅLAND ISLANDS (AX)
