--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -110,6 +110,7 @@ en:
       subjects: Subject
       primary_type: Type
       accession_date_year: Accession Date
+      creators: Creator
   search_sorting:
     sort_by: "Sort by:"
     asc: Ascending
