--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -1375,7 +1375,8 @@ en:
       update_location_record: create/modify/delete location records in this repository
       update_subject_record: create/update subject records
       update_agent_record: create/update agent records
-      update_archival_record: create/update the major record types in this repository
+      update_archival_record: create/update accessions, resources, archival objects and digital objects in this repository
+      update_event_record: create/update event records in this repository
       view_repository: view the records in this repository
       view_suppressed: view suppressed records in this repository
       suppress_archival_record: suppress the major record types in this repository
