--- a/frontend/config/locales/enums/en.yml
+++ b/frontend/config/locales/enums/en.yml
@@ -3,6 +3,7 @@ en:
     linked_agent_archival_record_roles:
       creator: Creator
       subject: Subject
+      source: Source
     linked_event_archival_record_roles:
       source: Source
       outcome: Outcome
