[Delivers #35791779] Add a new 'relator' option to linked agents to provide a more specific role.

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -948,6 +948,7 @@ en:
       plural: Record Links
   linked_agent: &linked_agent_attributes
     role: Role
+    relator: Relator
     ref: Agent
     _html:
       singular: Agent Link
