delivers container label TSV exports
tweak container label model

sqaush me

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -6,6 +6,7 @@ en:
     cancel: Cancel
     confirm: Confirm
     confirm_removal: Confirm Removal
+    container_labels: Download Container Labels
     create: Create
     edit: Edit
     view: View
