--- a/public/config/locales/en.yml
+++ b/public/config/locales/en.yml
@@ -36,6 +36,11 @@ en:
       primary_type: Type
       repository: Repository
       creators: Creator
+      keyword: Keyword
+      title: Title
+      creator: Creator
+      scope: Scope
+      contents: Contents Note
   search_sorting:
     sort_by: "Sort by:"
     asc: Ascending
@@ -44,6 +49,17 @@ en:
     title_sort: Title
     last_modified: Modified
     create_time: Created
+  advanced_search:
+    operator:
+      and: And
+      or: Or
+    button_text: Search
+    nav_switcher:
+      show: Show Advanced
+      hide: Hide Advanced
+    index_switcher:
+      show: Show Advanced Search
+      hide: Hide Advanced Search
   iso_3166:
     AF: AFGHANISTAN (AF)
     AX: ÅLAND ISLANDS (AX)
