WIP Introduce advanced_query to the backend search as param 'aq'

--- a/public/config/locales/en.yml
+++ b/public/config/locales/en.yml
@@ -53,6 +53,7 @@ en:
     operator:
       and: And
       or: Or
+      not: Not
     button_text: Search
     nav_switcher:
       show: Show Advanced
