Rollback changes to JSONSchemaUtils#determine_schema_for so amiguious objects require a jsonmodel_type to be present; Add OR to the boolean_query; Add Clear button to the advanced search; Retain all advanved search params in the queary string so facets and sort actions retain query filters;

--- a/public/config/locales/en.yml
+++ b/public/config/locales/en.yml
@@ -55,6 +55,7 @@ en:
       OR: Or
       NOT: Not
     button_text: Search
+    reset: Clear
     nav_switcher:
       show: Show Advanced
       hide: Hide Advanced
