Add 'Contact Note' to agent_contact; Also use the readonly form context to render the contact readonly template - so it retains carriage returns in textarea;

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -1092,6 +1092,7 @@ en:
     telephone_ext: Telephone Extension
     fax: Fax
     email: Email
+    note: Contact Notes
     _html:
       singular: Contact
       plural: Contact Details
