Update UI to handle storing of repository URI on the session (rather than the code); Also allow select of repo via the repo list and only on repo's the user has permissions to

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -1617,6 +1617,7 @@ en:
         created: Repository Created
         updated: Repository Saved
         selected: Repository is Currently Selected
+        selected_short: Selected
       section:
         all_fields: Repository Fields
       action:
