Fix advanced search when only one field is provided (was throwing an error); And also add advanced filter for a record's notes;

--- a/public/config/locales/en.yml
+++ b/public/config/locales/en.yml
@@ -40,7 +40,7 @@ en:
       title: Title
       creator: Creator
       scope: Scope
-      contents: Contents Note
+      notes: Notes
   search_sorting:
     sort_by: "Sort by:"
     asc: Ascending
