--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -117,6 +117,7 @@ en:
       accession_date_year: Accession Date
       creators: Creator
       source: Source
+      rules: Rules
   search_sorting:
     sort_by: "Sort by:"
     asc: Ascending
@@ -126,6 +127,9 @@ en:
     last_modified: Modified
     primary_type: Record Type
     create_time: Created
+    authority_id: Authority ID
+    source: Source
+    rules: Rules
   save_changes_modal:
     body: You have some outstanding changes.  Please save or dismiss these changes to continue.
     save: Save Changes
